# stratax

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  Doxyfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
bindings/: conversions.cpp  creation.cpp  matrix.cpp  module.cpp  shape.cpp  tensor.cpp  vector.cpp
bindings/common/: exceptions.cpp  helpers.cpp  utilities.cpp  utils.hpp
bindings/matrix/: _reshape.cpp  arithmetic.cpp  bind.cpp  constructors.cpp  conversions.cpp  indexing.cpp  properties.cpp  slicing.cpp
bindings/matrix/ops/: arithmetic.cpp  comparison.cpp
bindings/shape/: bind.cpp  constructors.cpp  properties.cpp
bindings/tensor/: _reshape.cpp  arithmetic.cpp  bind.cpp  constructors.cpp  conversions.cpp  indexing.cpp  properties.cpp  slicing.cpp
bindings/tensor/ops/: arithmetic.cpp  comparison.cpp
bindings/vector/: _reshape.cpp  arithmetic.cpp  bind.cpp  constructors.cpp  conversions.cpp  indexing.cpp  properties.cpp
bindings/vector/ops/: arithmetic.cpp  comparison.cpp
cmake/: CompilerOptions.cmake  Documentation.cmake  PythonBindings.cmake  Testing.cmake
docs/: CHANGELOG.md  Doxyfile  GETTING_STARTED.md  README.md  architecture.md  contributing.md  mainpage.md  roadmap.md
docs/cpp/html/: _arithmetic_8hpp.html  _arithmetic_8hpp_source.html  _arithmetic_8md.html  _buffer_8hpp.html  _buffer_8hpp.js  _buffer_8hpp_source.html  _buffer_8md.html  _comparison_8hpp.html  _comparison_8hpp_source.html  _comparison_8md.html  _concepts_8hpp.html  _concepts_8hpp_source.html  _concepts_8md.html  _config_8hpp.html  _config_8hpp.js  _config_8hpp_source.html  _conversions_8hpp.html  _conversions_8hpp.js  _conversions_8hpp_source.html  _conversions_8md.html  _creation_8hpp.html  _creation_8hpp.js  _creation_8hpp_source.html  _creation_8md.html  _exceptions_8hpp.html  _exceptions_8hpp.js  _exceptions_8hpp_source.html  _exceptions_8md.html  _indexing_8hpp.html  _indexing_8hpp_source.html  _indexing_8md.html  _matrix_8hpp.html  _matrix_8hpp_source.html  _matrix_8md.html  _print_8hpp.html  _print_8hpp.js  _print_8hpp_source.html  _print_8md.html  _r_e_a_d_m_e_8md.html  _reshape_8hpp.html  (+275 more)
docs/dev/: README.md  architecture.md  roadmap.md  stratax.md
docs/dev/bindings/: README.md  module.md
docs/dev/containers/: Conversions.md  Creation.md  Matrix.md  Tensor.md  Vector.md
docs/dev/core/: Buffer.md  Concepts.md  Config.md  Exceptions.md  Meta.md  Shape.md  Slice.md  Strides.md  Types.md  Validation.md
docs/dev/io/: Print.md
docs/dev/ops/: Arithmetic.md  Comparison.md  Indexing.md  Reshape.md  Slice.md
docs/guides/: CHANGELOG.md  GETTING_STARTED.md  architecture.md  contributing.md  roadmap.md
docs/output/html/: _arithmetic_8hpp.html  _arithmetic_8hpp.js  _arithmetic_8hpp_source.html  _arithmetic_8md.html  _buffer_8hpp.html  _buffer_8hpp_source.html  _buffer_8md.html  _c_h_a_n_g_e_l_o_g_8md.html  _comparison_8hpp.html  (+282 more)
docs/templates/: Class.md  Function.md  Module.md
examples/: 05_python.py
examples/cpp/: matrix.cpp  shape.cpp  tensor.cpp  vector.cpp
examples/python/: matrix.py  shape.py  tensor.py  vector.py
include/: stratax.h  stratax.hpp
python/stratax/: __init__.py  _core.cp313-win_amd64.pyd  _core.pyi  conversions.py  conversions.pyi  creation.py  creation.pyi  exceptions.py  exceptions.pyi  matrix.py  matrix.pyi  shape.py  shape.pyi  tensor.py  tensor.pyi  vector.py  vector.pyi
tests/containers/: Matrix.cpp  Tensor.cpp  Vector.cpp
tests/core/: Buffer.cpp  Concepts.cpp  Matrix.cpp  Shape.cpp  Strides.cpp  Types.cpp  Vector.cpp
tests/io/: Print.cpp
tests/ops/: Arithmetic.cpp  Comparison.cpp  Indexing.cpp  Reshape.cpp  Slice.cpp
tests/python/: conftest.py  conversions_tests.py  matrix_tests.py  package_tests.py  shape_tests.py  tensor_tests.py  vector_tests.py
(+306 files in other folders)
